# nn_training

MPI/: CMakeLists.txt  mpi_test  mpi_two2.slurm  mpi_two4.slurm  mpi_two8.slurm  one_sided_mpi.cpp  two_sided_mpi.cpp
MPI/1tests/: CMakeLists.txt  one_sided_test  one_sided_test.cpp  one_sided_test.slurm
MPI/2tests/: CMakeLists.txt  mpi_hello_world.cpp  mpi_test  mpi_two2.slurm  mpi_two8.slurm
MPI/include/: nn.h
OpenSHMEM/: Makefile  buffon.cpp  shmello.cpp  shmem_train.cpp
cudnn-training-master/: lenet.cu  thread_test.cpp
